<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateUser">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/adventure_invisible"
            android:text="@string/datos_personales"
            android:textSize="30sp"
            android:textStyle="bold" />
    <LinearLayout
        android:id="@+id/area_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_person_black_24dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/first_name_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/colorFondoButtonNav"
            android:hint="@string/firstname_text"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_name_edit_text"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/area_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/area_nombre"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_correo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_phone_black_24dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/last_name_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastname_text"
            app:hintTextColor="@color/colorFondoButtonNav"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/last_name_edit_text"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/area_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/area_telefono"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_below="@+id/img_correo"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_email_black_24dp"  />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/colorFondoButtonNav"
            android:hint="Email"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/area_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_below="@+id/img_correo"
            android:src="@drawable/ic_person_pin_black_24dp"
            android:layout_gravity="center_vertical"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/colorFondoButtonNav"
            android:hint="UserName"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                style="@style/CommonHintColor"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <!-- Bottom Bar -->
    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/boton_cancelar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorBlanco"
            android:text="@string/refresh_button"
            android:fontFamily="@font/adventure_invisible"
            android:textColor="@color/colorButtonSignUp" />

        <Button
            android:id="@+id/boton_aceptar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/adventure_invisible"
            android:backgroundTint="@color/colorButtonSignUp"
            android:text="@string/aceptar_button"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>
</ScrollView>